9 Updated and add 37 and

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,22 @@
         android:theme="@style/Theme.Esawar"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".Fragment.Profile"
+            android:exported="false" />
+        <activity
+            android:name=".Fragment.Feed"
+            android:exported="false" />
+        <activity
+            android:name=".Fragment.Home"
             android:exported="false" />
         <activity
             android:name=".authentication.Login"
+            android:exported="false" />
+        <activity
+            android:name=".authentication.SignUp"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
