--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,12 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        jcenter()
+        maven{
+
+            url "https://jitpack.io"
+
+        }
     }
 }
 rootProject.name = "Esawar"
