--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,6 @@ dependencies {
     // https://firebase.google.com/docs/android/setup#available-libraries
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'com.github.smarteist:autoimageslider:1.4.0'
+    implementation 'com.facebook.android:facebook-login:13.1.0'
 
 }
